Make clcok work in home and remove bugs on mobile

--- a/clock.css
+++ b/clock.css
@@ -3,7 +3,7 @@
     border: blueviolet solid 1px;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.666);
-    width: 5%;
+    width: 100px;
     margin-left: auto;
     margin-right: auto;
     padding: 7px;
